--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -165,6 +165,11 @@
 \subsection{Curso de Inteligencia Artificial y Redes Neuronales}
 \includepdf[pages=-]{FormacionAcademica/RedesNeuronales.pdf}
 
+\subsection{COMUNICACIÓN EFECTIVA EN EL AULA ONLINE Y PRESENCIAL: DINAMIZA LAS CLASES Y CONECTA CON EL ALUMNADO (ONLINE)}
+\includepdf[pages=-]{FormacionAcademica/Formacion_curso_comunicacion_efectiva.pdf}
+
+\subsection{IMPLEMENTACIÓN PRÁCTICA DE ESTRATEGIAS DE INNOVACIÓN DOCENTE (ONLINE)}
+\includepdf[pages=-]{FormacionAcademica/Formacion_curso_implementacion_practica.pdf}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Experiencia científica y tecnológica}
