--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -177,6 +177,14 @@
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Proyectos de I+D financiados en convocatorias competitivas de Administraciones públicas y privadas}
 
+\subsection{Algoritma de simulación ultra-rápida para aplicaciones industriales de tomografía muónica usando redes neuronales generativas adversarias}
+\includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionConcurrenciaCompetitiva/Investigacion_Proyectos_Simulacion_UltraRapida.pdf}
+
+\subsection{Integración y validación experimental de un demostrador tecnológico de un tomógrafo de muones con resolución temporal}
+
+
+\subsection{Actividades del IFCA para los "upgrades" de alta luminosidad del LHC: Inner Tracker y Endcap Timing Layer}
+\includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionConcurrenciaCompetitiva/Investigacion_Proyectos_Actividades_del_IFCA.pdf}
 
 \subsection{CENTRO DE PROCESADO DE DATOS DE CMS TIER-2 EN EL IFCA}
 \includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionConcurrenciaCompetitiva/Investigacion_Proyectos_CENTRO_DE_PROCESADO_DE_DATOS_CMS_TIER2.pdf}
