--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -436,6 +436,9 @@
 \subsection{A MIP Timing Detector for the CMS Phase-2 Upgrade: Technical Design Report}
 \includepdf[pages={1,2,3,4,5}]{ActividadCientificaYTecnologica/Libros/Investigacion_Libros_A_MIP_Timing_Detector_for_the_CMS_Phase2.pdf}
 
+\subsection{Artificial Intelligence, robotics and data science}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Libros/Investigacion_Libros_LibroBlanco_Redux.pdf}
+
 
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Trabajos presentados en congresos nacionales o internacionales}
@@ -482,33 +485,87 @@
 \subsection{CMS SUSY SEARCHES AT 13 TEV}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Seminarios/Investigacion_Seminarios_CMS_SUSY_SEARCHES_AT_13_TEV.pdf}
 
-\subsection{ActividadCientificaYTecnologica/Comparación de estrategias de control epidemiológico basadas en simulaciones con agentes autónomos y énfasis en el impacto del uso de aplicaciones de rastreo}
+\subsection{Comparación de estrategias de control epidemiológico basadas en simulaciones con agentes autónomos y énfasis en el impacto del uso de aplicaciones de rastreo}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Seminarios/Investigacion_Seminarios_Comparacion_de_estrategias_de_control.pdf}
 
-\subsection{ActividadCientificaYTecnologica/MAINTENANCE OF CRITICAL INDUSTRIAL EQUIPMENT USING COSMIC MUON RADIATION (Zurich)}
+\subsection{MAINTENANCE OF CRITICAL INDUSTRIAL EQUIPMENT USING COSMIC MUON RADIATION (Zurich)}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Seminarios/Investigacion_Seminarios_MAINTENANCE_OF_CRITICAL_INDUSTRIAL_EQUIPME.pdf}
 
-\subsection{ActividadCientificaYTecnologica/MAINTENANCE OF CRITICAL INDUSTRIAL EQUIPMENT USING COSMIC MUON RADIATION (CIEMAT)}
+\subsection{MAINTENANCE OF CRITICAL INDUSTRIAL EQUIPMENT USING COSMIC MUON RADIATION (CIEMAT)}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Seminarios/Investigacion_Seminarios_MAINTENANCE_OF_CRITICAL_INDUSTRIAL_EQUIPME_v2.pdf}
 
-\subsection{ActividadCientificaYTecnologica/SUSY SEARCHES WITH TWO OPPOSITE SIGN LEPTONS}
+\subsection{SUSY SEARCHES WITH TWO OPPOSITE SIGN LEPTONS}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Seminarios/Investigacion_Seminarios_SUSY_SEARCHES_WITH_TWO_OPPOSITE_SIGN_LEPTONS.pdf}
 
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Trabajos presentados en workshops}
 
-%\subsection{CMS workshop at Fermilab, Comité científico}
-%\includepdf[pages=-]{InvestigacionOtrosMeritos/Investigacion_OtrosMeritosCalidadInvestigadora_SUSY_Workshop_Chicago.pdf}
+\subsection{Tomografía muónica y TPA-TCT, Workshop on LHC technologies}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/RED-LHC-hardware.pdf}
 
-%\subsection{CMS workshop at Ghent, Comité científico y charla Overview of TBT group}
-%\includepdf[pages=-]{InvestigacionOtrosMeritos/Investigacion_OtrosMeritosCalidadInvestigadora_SUSY_Workshop_Ghent.pdf}
+\subsection{Role of the IA in the industrial applications of Muography, First MODE Workshop on Differentiable Programming for Experiment Design}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/MODECollaborationWorkshop.pdf}
 
-%\subsection{CMS workshop at Vienna, Comité científico}
-%\includepdf[pages=-]{InvestigacionOtrosMeritos/Investigacion_OtrosMeritosCalidadInvestigadora_SUSY_Workshop_Viena.pdf}
+\subsection{MTD report, CMS week plenary upgrade}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/PlenaryUpgrade.pdf}
+
+\subsection{SUSY (edge/chargino top/chargino) at CMS, 5th Red LHC Workshop}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/RED-LHC-Edge.pdf}
+
+\subsection{Application of Machine Learning for LHC Experiments Operation, I Workshop de Computing y Software de la Red Española del LHC}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/RED-LHC-computing.pdf}
+
+\subsection{Software developments and updates on performance projections, MTD Annual Review}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/AnnualReview.pdf}
+
+\subsection{MTD Reconstruction plans, MTD Days 2020}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/TimingDays2020.pdf}
+
+\subsection{MTD L1 Trigger: physics opportunities, MTD L1 Trigger Workshop}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/MTDLevel1Workshop.pdf}
+
+\subsection{TBT plans for legacy and plans for combinations, CMS SUYS Workshop}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/SUSYWorkshopViena.pdf}
+
+\subsection{Overview of the TBT group, CMS SUYS Workshop}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/SUSYWorkshopGante.pdf}
+
+\subsection{Status of CMS SUSY analysis for the CERN Jamboree, CMS Week}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/SUSYPlenaryCMSWeek2015.pdf}
+
+\subsection{A trigger strategy for the SUSY group, CMS Trigger Workshop at Padova}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CMSTriggerWorkshopPadova.pdf}
+
+\subsection{A proposal of standard model background requests for the SUSY group, CMS Susy Workshop Autumm 2014}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CMSSUSYChicago.pdf}
+
+\subsection{A trigger strategy for the SUSY group, CMS Trigger Workshop at Strasbourg}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CMSTriggerWorkshopStrasbourg.pdf}
+
+\subsection{A trigger strategy for the SUSY group, CMS Trigger Workshop at Brussels}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CMSTriggerWorkshopBrussels.pdf}
+
+\subsection{SUSY search with two leptons, jets and MET: the Edge, CMS Physics Week}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/SUSYCMSWeekLisbon.pdf}
+
+\subsection{Detailed comparisons between CMSSW 52x and 53x (Plenary talk, CMS Physics Week)}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CMSWeekLisbon.pdf}
+
+\subsection{Status of the alignment of the muon system, CMS Muon Barrel Workshop}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CMSMuonBarrelWorkshop.pdf}
+
+\subsection{Drift Tube Alignment with tracks, International CMS workshop on cosmic data analysis}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/CRAFTAnalysisworkshop.pdf}
+
+\subsection{CMS: Muon hardware system and MTCC experience, Second LHC Alignment Workshop}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/2ndLHCDetectorAlignmentWorkshop.pdf}
 
 
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Otras actividades de Divulgación}
+
+\subsection{Café Científico: La Física en Lucha contra el Covid-19}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Divulgacion/Docencia_OtrosMeritos_Divulgacion_Cafe_Cientifico_2021.pdf}
 
 \subsection{Café con Ciencia: Tomografía muónica: unha ollada ao interior da materia}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Divulgacion/Docencia_OtrosMeritos_Divulgacion_Cafe_Con_Ciencia_Tomografia_Muonica.pdf}
@@ -548,6 +605,12 @@
 
 
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
+\section{Comités Científicos, Técnicos y Asesores}
+\subsection{Carta de designación como participante en el meeting: Technical Meeting on Non-Destructive Testing Using Muon Radiography: Present Status and Emerging Applications}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/ComitesCientificosTecnicosAsesores/Transferencia_OtrosMeritos_Technical_Meeting_On_Non-Destructive_Testing.pdf}
+
+
+%XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Organización de actividades de I+D+i}
 
 \subsection{CMS workshop at Santander, Organizador del workshop}
@@ -561,10 +624,6 @@
 
 \subsection{CMS workshop at Chicago, Comité científico del workshop}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/OrganizacionActividadesID/Investigacion_OtrosMeritosCalidadInvestigadora_SUSY_Workshop_Chicago.pdf}
-
-\subsection{CMS workshop at Lisboa, Comité científico del workshop}
-
-\subsection{Muon workshop at CERN, Comité científico del workshop}
 
 
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
@@ -598,10 +657,8 @@
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Foros y comités nacionales e internacionales}
 
-\subsection{Carta de designación como participante en el meeting: Technical Meeting on Non-Destructive Testing Using Muon Radiography: Present Status and Emerging Applications}
-\includepdf[pages=-]{ActividadCientificaYTecnologica/ForosYComitesNacionalesInternacionales/Transferencia_OtrosMeritos_Technical_Meeting_On_Non-Destructive_Testing.pdf}
-
-
+\subsection{Participación en el World Year of Physics Launch Meeting}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/ForosYComitesNacionalesInternacionales/yearofphysics.pdf}
 
 
 
@@ -610,7 +667,6 @@
 
 \subsection{Referee de European Physics Journal C}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/RevisionProyectosArticulos/Investigacion_OtrosMeritosCalidadInvestigadora_Referee_EPJC.pdf}
-
 
 \subsection{Participación en paneles de evaluación del plan nacional de I+D}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/RevisionProyectosArticulos/Investigacion_OtrosMeritosCalidadInvestigadora_Paneles_Evaluacion_Plan_Nacional.pdf}
@@ -646,6 +702,15 @@
 
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Premios, menciones y distinciones}
+
+\subsection{Acreditación titular}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Premios/titular.pdf}
+\subsection{Acreditación I3}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Premios/I3.pdf}
+\subsection{Acreditación Contratado doctor}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Premios/contratadodoctor.pdf}
+\subsection{Acreditación Ayudante doctor}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Premios/ayudantedoctor.pdf}
 \subsection{Premio de la colaboración CMS Achievement Award}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Premios/Formacion_Premios_Premio_CMS_Achievement_Award.pdf}
 \subsection{Premio extraordinario de doctorado}
