--- a/DesarrolloDeTemas/Tema1/Ejercicios/ejercicios_Tema1.tex
+++ b/DesarrolloDeTemas/Tema1/Ejercicios/ejercicios_Tema1.tex
@@ -72,46 +72,41 @@
 %----------------------------------------------------------------------------------------
 %	PROBLEM 1
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 1.} El acelerador Tevatrón, situado en Fermilab, en el extraradio de la ciudad de Chicago, colisionaba protones
-con antiprotones en el sistema centro de masas y con una energía del centro de masas de $\sqrt{s}=$ 2 TeV. Con frecuencia la colisión
-se traducía en una interacción entre un quark u del protón y un antiquark $\bar{u}$ del antiprotón dando lugar a un muon y un antimuon en 
-el estado final $u\bar{u}\rightarrow\mu^{-}\mu^{+}$. El quark u y el antiquark $\bar{u}$ tienen un momento $x_u\vec{P}_p$ y $x_{\bar{u}}\vec{P}_{\bar{p}}$
-respectivamente, en donde $\vec{P}_p$ y $\vec{P}_{\bar{p}}$ son los momentos del protón y el antiprotón, y $x_u$ y $x_{\bar{u}}$ son dos números reales
-comprendidos entre 0 y 1. ¿Cuanto vale el módulo de $\vec{P}_p$ y $\vec{P}_{\bar{p}}$?. \textbf{(0.5 puntos)}. Suponiendo que la dirección y sentido
-del eje Z coincide con la dirección y sentido del movimiento de los protones, demuestra que si los dos muones resultantes se mueven hacia valores de z
-positivos entonces $x_u>x_{\bar{u}}$. \textbf{(0.5 puntos)}. Calcula el producto $x_ux_{\bar{u}}$ si el muon y el antimuon son detectados ambos
-con la mitad de la energía del protón inicial y formando un ángulo entre sí tal que $\cos{\theta}=1/2$. Asume que en todo momento las masas de los quarks
-y los muones son despreciables. \textbf{(1 punto)}.
+\textbf{Cuestión 1.} Una partícual de masa 3 GeV viaja en la dirección positiva del eje Z con momento 4 GeV. ¿Cuál es su energía y su velocidad?
 \\
 \\
 %----------------------------------------------------------------------------------------
 %       PROBLEM 2
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 2.} Supongamos que un operador A puede escriberse como $A=a_\mu\gamma^\mu$ en donde $a_\mu$ es un cuadrivector de números reales. 
-Demuestra que el anticonmutador $\{A, \gamma^\nu\}=2a^{\nu}$. \textbf{(0.5 puntos)}. Demuestra también que $\{A^2, \gamma^\nu\}=4Aa^\nu$. \textbf{(0.5 puntos)}.
-Finalmente considerando el operador $B=b_\mu\gamma^\mu+bI$ con $b_\mu$ un cuadrivector de números reales, b un número real e $I$ la matriz identidad,
-demostrar que $\{A,B\}$ sólo puede ser nulo cuando $a_\mu b^\mu=0$ y $b=0$. \textbf{(1 punto)}.   
+\textbf{Cuestión 2.} Para un decaimiento $a\rightarrow 1 + 2$, muestra que la masa de la partícula a puede ser expresada como:
+\begin{equation*}
+m_{a}^2 = m_1^2 + m_2^2 + 2E_1E_2(1-\beta_1\beta_2cos(\theta))
+\end{equation*}
 \\
 \\
 %----------------------------------------------------------------------------------------
 %       PROBLEM 3
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 3.} Definir los siguientes conceptos: Cuadricorriente de probabilidad, espinor adjunto, sección eficaz diferencial, teoría gauge. \textbf{(2 puntos)}.
+\textbf{Cuestión 3.} En el sistema de referencia de laboratorio, un protón con una energía total E colision con otro protón en reposo. Encuentra la energía mínima del proceso para
+que el siguiente proceso esté cinemáticamente permitido.
+\begin{equation*}
+p + p \rightarrow p + p + \bar{p} + p
+\end{equation*}
 \\
 \\
 %----------------------------------------------------------------------------------------
 %       PROBLEM 4
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 4.} Considera los operadores $\Lambda_+ = \frac{m + \gamma_\mu p^\mu}{2m}$ y $\Lambda_- = \frac{m + \gamma_\mu p^\mu}{2m}$. Usando la ecuación
-de Dirac para espinores de partícula y antipartícula, demuestra cuál es el resultado de aplicar cada uno de ellos a dichos espinores de partícula y antipartícula. \textbf{(0.75 puntos)}.
-¿A la vista del resultado qué es lo que hacen estos operadores?. \textbf{(0.25 puntos)}. Demuestra que $\Lambda_+^2=\Lambda_+$ y que $\Lambda_+\Lambda_-=0$ sin usar
-los espinores.\textbf{(1 punto)}.
+\textbf{Cuestión 4.} Para el proceso $1 + 2 \rightarrow 3 + 4$, las variables de Mandelstam s, t y u, están definidas como $s = (p_1+p_2)^2$, $t = (p_1-p_3)^2$ y $u = (p_1-p_4)^2$. Demuestra que:
+\begin{equation*}
+s + u + t = m_1^2 + m_2^2 + m_3^2 + m_4^2
+\end{equation*}
 \\
 \\
 %----------------------------------------------------------------------------------------
 %       PROBLEM 5
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 5.} ¿Qué relación guarda el llamado flujo invariante Lorentz con la sección eficaz?. \textbf{(0.5 puntos)}. Calcula el valor del flujo invariante Lorentz
+\textbf{Cuestión 5.} En un experimento de blanco fijo protón-protón, ¿Qué relación guarda el llamado flujo invariante Lorentz con la sección eficaz?. \textbf{(0.5 puntos)}. Calcula el valor del flujo invariante Lorentz
 $F=4[(p^\mu_1p_{2\mu})^2 - m_1^2 m_2^2]^{1/2}$ para el caso en el que la partícula 1 tiene momento $\vec{p}_1$ y la partícula 2 está en reposo. \textbf{(1 punto)}. ¿Por qué
 con frecuencia se da la sección eficaz diferencial en términos de $\frac{d\sigma}{dt}$ donde t es el invariante de Mandelstam?. ¿Qué ventajas aporta esto en el contexto
 de la comparación de resultados en diferentes experimentos?. Razona tu respuesta. \textbf{(0.5 puntos)}. 
