--- a/DesarrolloDeTemas/Tema1/Ejercicios/ejercicios_Tema1.tex
+++ b/DesarrolloDeTemas/Tema1/Ejercicios/ejercicios_Tema1.tex
@@ -106,33 +106,6 @@ s + u + t = m_1^2 + m_2^2 + m_3^2 + m_4^2
 %----------------------------------------------------------------------------------------
 %       PROBLEM 5
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 5.} En un experimento de blanco fijo protón-protón, ¿Qué relación guarda el llamado flujo invariante Lorentz con la sección eficaz?. \textbf{(0.5 puntos)}. Calcula el valor del flujo invariante Lorentz
-$F=4[(p^\mu_1p_{2\mu})^2 - m_1^2 m_2^2]^{1/2}$ para el caso en el que la partícula 1 tiene momento $\vec{p}_1$ y la partícula 2 está en reposo. \textbf{(1 punto)}. ¿Por qué
-con frecuencia se da la sección eficaz diferencial en términos de $\frac{d\sigma}{dt}$ donde t es el invariante de Mandelstam?. ¿Qué ventajas aporta esto en el contexto
-de la comparación de resultados en diferentes experimentos?. Razona tu respuesta. \textbf{(0.5 puntos)}. 
-  
-\vspace{3cm}
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[width=0.6\linewidth]{espinores.png}
-\end{center}
-\caption{Espinores solución a la ecuación de Dirac y autoestados del operador helicidad.}
-\label{espinores}
-\end{figure}
-
-
-\begin{figure}[!h]
-\begin{center}
-\includegraphics[width=0.6\linewidth]{matrices.png}
-\end{center}
-\caption{Matrices de Dirac.}
-\label{matrices}
-\end{figure}
-
-
-
-
-
-
+\textbf{Cuestión 5.} En un experimento de blanco fijo protón-protón, ¿qué energía sería necesaria para el protón para conseguir la misma energía del centro de masas del LHC, que está diseñado para
+alcanzar $\sqrt{s}=14$~TeV?
 \end{document}
