--- a/DesarrolloDeTemas/Tema1/Ejercicios/ejercicios_Tema1.tex
+++ b/DesarrolloDeTemas/Tema1/Ejercicios/ejercicios_Tema1.tex
@@ -72,7 +72,7 @@
 %----------------------------------------------------------------------------------------
 %	PROBLEM 1
 %----------------------------------------------------------------------------------------
-\textbf{Cuestión 1.} Una partícual de masa 3 GeV viaja en la dirección positiva del eje Z con momento 4 GeV. ¿Cuál es su energía y su velocidad?
+\textbf{Cuestión 1.} Una partícual de masa 3 GeV viaja en la dirección positiva del eje Z con momento 4 GeV. ¿Cuál es su energía y su velocidad? Expresa el resultado en unidades naturales y en el sistema internacional.
 \\
 \\
 %----------------------------------------------------------------------------------------
@@ -107,5 +107,5 @@ s + u + t = m_1^2 + m_2^2 + m_3^2 + m_4^2
 %       PROBLEM 5
 %----------------------------------------------------------------------------------------
 \textbf{Cuestión 5.} En un experimento de blanco fijo protón-protón, ¿qué energía sería necesaria para el protón para conseguir la misma energía del centro de masas del LHC, que está diseñado para
-alcanzar $\sqrt{s}=14$~TeV?
+alcanzar $\sqrt{s}=14$~TeV?. Expresa el resultado en unidades naturales y en el sistema internacional.
 \end{document}
