--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -181,7 +181,7 @@
 \includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionConcurrenciaCompetitiva/Investigacion_Proyectos_Simulacion_UltraRapida.pdf}
 
 \subsection{Integración y validación experimental de un demostrador tecnológico de un tomógrafo de muones con resolución temporal}
-
+\includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionConcurrenciaCompetitiva/Investigacion_Proyectos_TomografoMuones_RD_PDC2021_redux.pdf}
 
 \subsection{Actividades del IFCA para los "upgrades" de alta luminosidad del LHC: Inner Tracker y Endcap Timing Layer}
 \includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionConcurrenciaCompetitiva/Investigacion_Proyectos_Actividades_del_IFCA.pdf}
