--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -500,6 +500,10 @@
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Trabajos presentados en workshops}
 
+
+\subsection{Application of muography to the industrial sector}
+\includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/Muography2021_CertificateAttendance_Pablo.pdf}
+
 \subsection{Tomografía muónica y TPA-TCT, Workshop on LHC technologies}
 \includepdf[pages=-]{ActividadCientificaYTecnologica/Workshops/RED-LHC-hardware.pdf}
 
