--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -156,6 +156,9 @@
 \subsection{Certiticado C1 inglés}
 \includepdf[pages=-]{FormacionAcademica/Formacion_NivelC1_Ingles.pdf}
 
+\subsection{Capacitación linguística}
+\includepdf[pages=-]{FormacionAcademica/CapacitacionLinguistica.pdf}
+
 %XXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXXX
 \section{Formacion especializada}
 
