--- a/CV/IndiceJustificaciones.tex
+++ b/CV/IndiceJustificaciones.tex
@@ -236,6 +236,14 @@
 \subsection{Co-fundación y consultorías para la empresa Muon Tomography Systems S.L. (2015-2017)}
 \includepdf[pages=-]{ExperienciaCientificaYTecnologica/ProyectosInvestigacionSinConcurrenciaCompetitiva/Transferencia_TransferenciaAlSectorProductivo_MuonSystems.pdf}
 
+\section{Acreditaciones}
+
+\subsection{Acreditación Profesor Titular}
+\includepdf[pages=-]{ExperienciaCientificaYTecnologica/Acreditaciones/ProfesorTitular.pdf}
+
+\subsection{Acreditación I3}
+\includepdf[pages=-]{ExperienciaCientificaYTecnologica/Acreditaciones/CertificacionI3.pdf}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 \chapter{Actividad Científica y Tecnologíca}
