--- a/DesarrolloDeTemas/Tema5/Ejercicios/ejercicios_Tema5.tex
+++ b/DesarrolloDeTemas/Tema5/Ejercicios/ejercicios_Tema5.tex
@@ -95,7 +95,7 @@ siendo $s = sin(\theta / 2)$ y $c = cos(\theta/2)$.
 \item Explicar por qué el efecto de aplicar el operador de paridad $P=\gamma^0$ es:
 
 \begin{equation*}
-P\bar{u_{\uparrow}}(p, \theta, \phi) = Pu_{\downarrow}(p, \pi - \theta, \pi + \phi) 
+P{u_{\uparrow}}(p, \theta, \phi) = u_{\downarrow}(p, \pi - \theta, \pi + \phi) 
 \end{equation*}
 
 y calcula haciendo uso de ello las corrientes asociadas a los muones de las distintas combinaciones de helicidad.
@@ -111,7 +111,7 @@ donde $s = (p_1 + p_ 2)^2$. Hallas las expresiones correspondientes para $M_{RR}
 \item En el límite relativista demuestra que la sección eficaz diferencial para este proceso en el caso no polarizado en el sistema centro de masas es:
 
 \begin{equation*}
-\frac{d\sigma}{d\Omega} = \frac{2\alpha^2}{s} \frac{1 + 1/4(1 + cos^2(\theta))}{(1-cos^2(\theta))}
+\frac{d\sigma}{d\Omega} = \frac{2\alpha^2}{s} \frac{1 + 1/4(1 + cos(\theta))^2}{(1-cos(\theta))^2}
 \end{equation*}
 
 \end{enumerate}
